<resources>
    <string name="app_name" translatable="false">HelloBluetooth</string>

    <string name="state_none">None</string>
    <string name="state_off">Turned Off</string>
    <string name="state_on">Turned On</string>
    <string name="state_turning_off">Turning Off…</string>
    <string name="state_turning_on">Turning On…</string>
    <string name="state_disconnected">Disconnected</string>
    <string name="state_disconnecting">Disconnecting…</string>
    <string name="state_connecting">Connecting…</string>
    <string name="state_connected">Connected</string>

    <string name="some_error_message">Oops! Something went wrong</string>
    <string name="connecting_error_message">Failed to connect to the device</string>
    <string name="send_error_message">Failed to send data</string>
    <string name="receive_error_message">Failed to receive data</string>

    <string name="connection_error_dialog_title">Failed to send data</string>
    <string name="connection_error_dialog_message">Please connect your device first</string>
    <string name="connect_dialog_button_text">Connect</string>

    <!--    Connection Fragment    -->
    <string name="connection_fragment_title">Connection</string>
    <string name="bluetooth_turned_off_message_title">Bluetooth Turned Off</string>
    <string name="bluetooth_turned_off_message_text">Turn on to connect devices and transfer data</string>
    <string name="turn_on_bluetooth_button_text">Turn on</string>
    <string name="bluetooth_permission_message_title">This app would like to use Bluetooth</string>
    <string name="bluetooth_permission_message_text">Used to scan, connect, and transfer data</string>
    <string name="permission_settings_button_text">Allow in setting</string>
    <string name="location_permission_message_title">This app would like to use Location</string>
    <string name="location_permission_message_text">Used to scan bluetooth devices</string>
    <string name="location_turned_off_message_title">Location Turned Off</string>
    <string name="location_turned_off_message_text">Turn on to scan bluetooth devices</string>
    <string name="turn_on_location_button_text">Turn on in setting</string>
    <string name="paired_devices_title">Paired devices</string>
    <string name="available_devices_title">Available devices</string>
    <string name="refresh_button_description">Refresh</string>

    <string name="empty_list_message_title">NOTHING!</string>
    <string name="empty_devices_list_message_text">Your devices list is empty</string>
    <string name="empty_list_message_text">Your collection list is empty</string>

    <!--    My Controller Fragment    -->
    <string name="my_controllers_fragment">My Controllers</string>
    <plurals name="widget_plural">
        <item quantity="one">%1$d widget</item>
        <item quantity="other">%1$d widgets</item>
    </plurals>
    <string name="add_controller_button_description">Add new Controller</string>
    <string name="add_manually_button_description">Add manually</string>
    <string name="scan_qr_code_button_description">Scan QR Code</string>
    <string name="apply_changes_button_description">Apply changes</string>
    <string name="share_qr_code_menu_title">Share QR Code</string>
    <string name="drag_popup_menu_title">Drag</string>
    <string name="edit_popup_menu_title">Edit</string>
    <string name="delete_popup_menu_title">Delete</string>
    <string name="qr_code_error_title">QR Code failed to generate</string>
    <string name="qr_code_error_message">The controller \"%1$s\" is too large for this format</string>
    <string name="camera_permission_message_title">This app would like to use Camera</string>
    <string name="camera_permission_message_text">Used to scan QR Code</string>
    <string name="deny_button_text">Deny</string>
    <string name="scan_qr_code_error_message_text">Invalid format</string>

    <string name="delete_item_dialog_title">Confirm Delete</string>
    <string name="delete_item_dialog_message">Are you sure you want to delete \"%1$s\"?</string>

    <!--    Controller Settings Fragment    -->
    <string name="controller_settings_fragment_title">Controller Settings</string>
    <string name="controller_name_label_text">Name</string>
    <string name="enter_controller_name_hint">Enter controller name</string>

    <string name="invalid_value_message_text">Invalid value</string>

    <!--    Controller Fragment    -->
    <string name="controller_fragment_title">Controller</string>
    <string name="add_widget_button_description">Add new Widget</string>
    <string name="sync_button_description">Sync</string>
    <string name="message_hint">Message</string>
    <string name="speech_to_text_hint">Speak now</string>

    <!--    Widget Settings Fragment    -->
    <string name="widget_settings_fragment_title">Widget Settings</string>
    <string name="widget_name_label_text">Name</string>
    <string name="enter_widget_name_hint">Enter widget name</string>
    <string name="widget_type_label_text">Type</string>
    <string name="select_widget_type_hint">Select widget type</string>
    <string name="command_tag_label_text">Tag</string>
    <string name="enter_command_tag_hint">Enter command tag</string>
    <string name="widget_icon_label_text">Icon</string>
    <string name="select_widget_icon_hint">Select widget icon</string>
    <string name="widget_mode_label_text">Mode</string>
    <string name="readonly_hint">Readonly</string>

    <!--    Terminal Fragment    -->
    <string name="terminal_fragment_title">Terminal</string>
    <string name="clear_terminal_button_description">Clear Terminal</string>
    <string name="input_command_hint">Type a command</string>

    <!--    Examples Page    -->
    <string name="examples_page_title">Examples</string>

    <!--    Settings Fragment    -->
    <string name="settings_fragment_title">Settings</string>
    <string name="theme_label_text">Theme</string>
    <string name="light_mode_label_text">Light mode</string>
    <string name="auto_mode_label_text">Auto mode</string>
    <string name="dark_mode_label_text">Dark mode</string>
    <string name="language_label_text">Language</string>
    <string name="language_label_hint">Speech to text</string>
    <string name="select_language_hint">Select language</string>

    <string name="default_language_title">Default</string>
    <string name="english_language_title">English</string>

    <!--    Widget types -->
    <string name="widget_types__button">Button</string>
    <string name="widget_types__switch">Switch</string>
    <string name="widget_types__slider">Slider</string>
    <string name="widget_types__text_field">Text Field</string>
    <string name="widget_types__voice_button">Voice Button</string>

    <!--    Widget icons -->
    <string name="widget_icons__none">None</string>
    <string name="widget_icons__android" translatable="false">Android</string>
    <string name="widget_icons__mic" translatable="false">Microphone</string>
    <string name="widget_icons__arrow_down" translatable="false">Arrow down</string>
    <string name="widget_icons__arrow_left" translatable="false">Arrow left</string>
    <string name="widget_icons__arrow_right" translatable="false">Arrow right</string>
    <string name="widget_icons__arrow_up" translatable="false">Arrow up</string>
    <string name="widget_icons__rotate_left" translatable="false">Arrow rotate left</string>
    <string name="widget_icons__rotate_right" translatable="false">Arrow rotate right</string>
    <string name="widget_icons__stop" translatable="false">Stop</string>
    <string name="widget_icons__battery" translatable="false">Battery</string>
    <string name="widget_icons__power" translatable="false">Power</string>
    <string name="widget_icons__speed" translatable="false">Speed</string>
    <string name="widget_icons__temperature" translatable="false">Temperature</string>
    <string name="widget_icons__volume" translatable="false">Volume</string>
    <string name="widget_icons__time" translatable="false">Time</string>
    <string name="widget_icons__lightbulb" translatable="false">Light</string>
    <string name="widget_icons__highlight" translatable="false">Highlight</string>
    <string name="widget_icons__camera" translatable="false">Camera</string>
    <string name="widget_icons__color" translatable="false">Color</string>
    <string name="widget_icons__effect" translatable="false">Effect</string>
    <string name="widget_icons__location" translatable="false">Location</string>
    <string name="widget_icons__lock" translatable="false">Lock</string>
    <string name="widget_icons__save" translatable="false">Save</string>
    <string name="widget_icons__special" translatable="false">Special</string>
</resources>