<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/connection_fragment">

    <fragment
        android:id="@+id/connection_fragment"
        android:name="com.maxclub.android.hellobluetooth.destinations.ConnectionFragment"
        android:label="@string/connection_fragment_title"
        tools:layout="@layout/fragment_connection"/>
    <fragment
        android:id="@+id/my_controllers_fragment"
        android:name="com.maxclub.android.hellobluetooth.destinations.MyControllersFragment"
        android:label="@string/my_controllers_fragment"
        tools:layout="@layout/fragment_my_controllers" >
        <action
            android:id="@+id/action_my_controllers_fragment_to_controller_fragment"
            app:destination="@id/controller_fragment" />
        <action
            android:id="@+id/action_my_controllers_fragment_to_controller_settings_fragment"
            app:destination="@id/controller_settings_fragment" />
    </fragment>
    <fragment
        android:id="@+id/controller_settings_fragment"
        android:name="com.maxclub.android.hellobluetooth.destinations.ControllerSettingsFragment"
        android:label="@string/controller_settings_fragment_title"
        tools:layout="@layout/fragment_controller_settings" >
        <argument
            android:name="controller"
            app:argType="com.maxclub.android.hellobluetooth.data.Controller"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/controller_fragment"
        android:name="com.maxclub.android.hellobluetooth.destinations.ControllerFragment"
        android:label="@string/controller_fragment_title"
        tools:layout="@layout/fragment_controller" >
        <argument
            android:name="controller"
            app:argType="com.maxclub.android.hellobluetooth.data.Controller" />
        <action
            android:id="@+id/action_controller_fragment_to_widget_settings_fragment"
            app:destination="@id/widget_settings_fragment" />
    </fragment>
    <fragment
        android:id="@+id/widget_settings_fragment"
        android:name="com.maxclub.android.hellobluetooth.destinations.WidgetSettingsFragment"
        android:label="@string/widget_settings_fragment_title"
        tools:layout="@layout/fragment_widget_settings" >
        <argument
            android:name="controller"
            app:argType="com.maxclub.android.hellobluetooth.data.Controller" />
        <argument
            android:name="widget"
            app:argType="com.maxclub.android.hellobluetooth.data.Widget"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/terminal_fragment"
        android:name="com.maxclub.android.hellobluetooth.destinations.TerminalFragment"
        android:label="@string/terminal_fragment_title"
        tools:layout="@layout/fragment_terminal">
    </fragment>
    <fragment
        android:id="@+id/settings_fragment"
        android:name="com.maxclub.android.hellobluetooth.destinations.SettingsFragment"
        android:label="@string/settings_fragment_title"
        tools:layout="@layout/fragment_settings" />
</navigation>