<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_placeholder"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/bluetooth_turned_off_message_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:gravity="center"
        android:text="@string/bluetooth_turned_off_message_text"
        android:textSize="16sp" />

    <Button
        android:id="@+id/turn_on_bluetooth_button"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/turn_on_bluetooth_button_text"
        app:icon="@drawable/ic_baseline_bluetooth_24" />
</LinearLayout>