<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_placeholder"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:gravity="center"
        android:text="@string/bluetooth_permission_message_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:gravity="center"
        android:text="@string/bluetooth_permission_message_text"
        android:textSize="16sp" />

    <Button
        android:id="@+id/bluetooth_permission_settings_button"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/permission_settings_button_text"
        app:icon="@drawable/ic_baseline_perm_device_information_24" />
</LinearLayout>